--- a/react-front-end/public/index.html
+++ b/react-front-end/public/index.html
@@ -17,7 +17,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,8 +31,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Soraya Sound Bath</title>
+    <link href="https://unpkg.com/cloudinary-video-player@1.10.0/dist/cld-video-player.min.css" rel="stylesheet">
+
   </head>
   <body>
+    <script src="https://unpkg.com/cloudinary-video-player@1.10.0/dist/cld-video-player.min.js" 
+    type="text/javascript"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="portal"></div>
